test-google/gce_ssl_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-gce-ssl
  namespace: test-google
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s-gce-ssl
  template:
    metadata:
      labels:
        app: hello-k8s-gce-ssl
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "80m"
          limits:
            memory: "128Mi"
            cpu: "250m"
