test-google/gce_ssl_service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-gce-ssl
  namespace: test-google
spec:
  # GCE Ingress has to be 'NodePort' or 'LoadBalancer'
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-k8s-gce-ssl
