test-google/gce_ssl_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-k8s-gce-ssl
  namespace: test-google
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: hello-k8s-gce-ssl
spec:
  rules:
  - host: singorojo.my.id
    http:
      paths:
      - backend:
          serviceName: hello-k8s-gce-ssl
          servicePort: 80
        path: /*
